--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blabber",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Chat application",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "oembed": "^0.1.2",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
